# django_blog

./: .gitignore  Docker-compose.yaml  Dockerfile  README.md  db.sqlite3  pyproject.toml
blog/: urls.py  views.py
blog/migrations/: 0001_initial.py
blog/static/css/: blog.css
blog/templates/blog/: base.html  post_detail.html  post_draft_list.html
blog/templates/registration/: login.html
mysite/: settings.py  urls.py
