[tool.poetry]
name = "django-girls-tutorial"
version = "0.1.0"
description = ""
authors = ["gibbstp <gibbstp@gmail.com>"]
readme = "README.md"
packages = [{include = "django_girls_tutorial"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
